UtahLiveDataTest/src/objects/PreApplication__c.object
<CustomObject>
    <description>[Business] Pre-Application is a trimmed version of the Application with limited information</description>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <label>Acknowledgement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement1__c</fullName>
        <description>This field is used in Grantor References and Certification Form</description>
        <label>Agreement1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement2__c</fullName>
        <description>This field is used in Grantor Pre-Application Education form.</description>
        <label>Agreement2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement3__c</fullName>
        <description>This field is used in Grantor Pre-Application Health form.</description>
        <label>Agreement3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AllocationPercentage__c</fullName>
        <description>Allocation Percentage for Formula Grants</description>
        <inlineHelpText>Allocation Percentage for Formula Grants</inlineHelpText>
        <label>AllocationPercentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountAllocated__c</fullName>
        <description>Amount Allocated for Pre application for Formula Grants</description>
        <inlineHelpText>Amount Allocated for Pre application for Formula Grants</inlineHelpText>
        <label>Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Announcement</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipName>PreApplications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicantNameAcknowledge__c</fullName>
        <label>Applicant&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationCreatedOutside__c</fullName>
        <formula>Text(Announcement__r.ApplicationCreatedOutside__c)== &apos;Yes&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Created Outside System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationDeadline__c</fullName>
        <description>The Deadline by by which the Application must be submitted</description>
        <label>Application Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApplicationID__c</fullName>
        <label>Application ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationType__c</fullName>
        <description>The type of application.</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>TBD1</fullName>
                </value>
                <value>
                    <fullName>TBD2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Director populates this field for assigning to individual user</description>
        <inlineHelpText>Project Director populates this field for assigning to individual user</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Preapplications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardCeiling__c</fullName>
        <description>Award Ceiling for the Oppoirtunity</description>
        <label>Award Ceiling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardFloor__c</fullName>
        <description>The Lowest amount that the Announcement will pay for</description>
        <label>Award Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardingAgencyContact__c</fullName>
        <description>The Contact from Agency who is the point of contact</description>
        <label>Awarding Agency Contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BudegetInformation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Budget Category</label>
        <referenceTo>ApplicationBudgetCategory2__c</referenceTo>
        <relationshipLabel>Pre-Applications</relationshipLabel>
        <relationshipName>Pre_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>The budget Field on the Announcement object which is carried over to Pre-Application or Application</description>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFDANumber__c</fullName>
        <description>The CFDA number for the Announcement which is announced by the  Federal Program</description>
        <label>CFDA Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificationTitle1__c</fullName>
        <label>Certification Title 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificationTitle2__c</fullName>
        <label>Certification Title 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificationTitle3__c</fullName>
        <label>Certification Title 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactSecondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pre-Applications</relationshipLabel>
        <relationshipName>Pre_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContextReference1__c</fullName>
        <label>Context Reference</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContextReference2__c</fullName>
        <label>Context Reference</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContextReference3__c</fullName>
        <label>Context Reference</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CreateApplication__c</fullName>
        <description>Button logic to hide /show the Create Application Button</description>
        <formula>OR(ISPICKVAL( Status__c , &apos;Created&apos;),ISPICKVAL( Status__c , &apos;Reviewed&apos;),ISPICKVAL( Status__c , &apos;Rejected&apos;),ISPICKVAL( Status__c , &apos;Converted to Application&apos;),ISPICKVAL(Status__c , &apos;Submitted for Approval&apos;),ISPICKVAL( Status__c , &apos;Approved&apos;))</formula>
        <label>Create Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateHistory__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Decision field to specify that the history record must be created</description>
        <label>Create History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Created Date created for displaying just the Date field on the page Details layout</description>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Acknowledgement__c</fullName>
        <label>Date Of Acknowledgement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysLeft__c</fullName>
        <formula>42</formula>
        <inlineHelpText>Days left to apply</inlineHelpText>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description1__c</fullName>
        <label>Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description2__c</fullName>
        <label>Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description3__c</fullName>
        <label>Description 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayApprovalButton__c</fullName>
        <formula>OR( 
(ISPICKVAL(Status__c , &apos;Approved&apos;)), 
ISPICKVAL( Status__c , &apos;Converted to Application&apos;), 
ISPICKVAL( Status__c , &apos;Submitted for Approval&apos;), 
ISPICKVAL( Status__c , &apos;Created&apos;), 

(ISPICKVAL(Status__c , &apos;Sent to Grants.gov&apos;)), 
(FormsValidated__c == false) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Approval Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocumentDescription1__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentDescription2__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentDescription3__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentName1__c</fullName>
        <label>Document Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentName2__c</fullName>
        <label>Document Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentName3__c</fullName>
        <label>Document Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <formula>Announcement__r.PreApplicationDeadlineWithDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EditButton__c</fullName>
        <formula>OR(ISPICKVAL( Status__c , &apos;Converted to Application&apos;),ISPICKVAL( Status__c , &apos;Submitted to Grantor&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EditButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EligibilityDescription__c</fullName>
        <label>Eligibility Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailRef1__c</fullName>
        <label>EmailRef1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailRef2__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailRef3__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EnablePreApplicationSubmissionEmail__c</fullName>
        <formula>Announcement__r.EnablePreApplicationSubmissionEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enable PreApplication Submission Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedOutcomeFromEduProgram__c</fullName>
        <label>Expected Outcome From This Program</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ExpectedOutcomeFromThisProgram__c</fullName>
        <label>Expected Outcome From This Program</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ExternalOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which organization owns the pre-application?</inlineHelpText>
        <label>External Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Preapplications</relationshipLabel>
        <relationshipName>Preapplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FederalAwardingAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Federal Agency which has Published this Announcement /Opportunity</description>
        <label>Federal Awarding Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pre-Applications (Federal Awarding Agency)</relationshipLabel>
        <relationshipName>Pre_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FederalProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Federal Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Pre-Applications (Federal Program)</relationshipLabel>
        <relationshipName>Pre_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinalApproverComments__c</fullName>
        <inlineHelpText>Field used by the Final Approver to make comments on the Pre-Application during the Pre-Application Approval or Rejection Process</inlineHelpText>
        <label>Final Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FormsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify that the Forms are completed</description>
        <label>Forms Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for validation of form depends upon percentage of form filled.</description>
        <label>Forms Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormulaVariable1__c</fullName>
        <description>Variable 1 for Formula Grants</description>
        <inlineHelpText>Variable 1 for Formula Grants</inlineHelpText>
        <label># of Entities</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FormulaVariable2__c</fullName>
        <description>Variable 2  for Formula Grants</description>
        <inlineHelpText>Variable 2  for Formula Grants</inlineHelpText>
        <label>Avg Participants/Entity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FormulaVariable3__c</fullName>
        <description>Variable 3  for Formula Grants</description>
        <inlineHelpText>Variable 3  for Formula Grants</inlineHelpText>
        <label>Special Factors</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityNumber__c</fullName>
        <formula>HYPERLINK( 
LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300))
+ Announcement__r.Id, 
Announcement__r.AnnouncementNumber__c 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GranteeApproval__c</fullName>
        <formula>OR( 
(ISPICKVAL(Status__c , &apos;Approved&apos;)), 
ISPICKVAL( Status__c , &apos;Converted to Application&apos;), 
ISPICKVAL( Status__c , &apos;Submitted for Approval&apos;), 
ISPICKVAL( Status__c , &apos;Submitted to Grantor&apos;),
(ISPICKVAL(Status__c , &apos;Sent to Grants.gov&apos;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Grantee Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GranteeRequestedAmount__c</fullName>
        <description>Requested amount as rollup summary</description>
        <label>Requested Amount</label>
        <summarizedField>PreApplicationBudgetCategory__c.GrantorAmount__c</summarizedField>
        <summaryFilterItems>
            <field>PreApplicationBudgetCategory__c.IsFirstBudgetPeriodRelated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>PreApplicationBudgetCategory__c.PreApplication__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GranteeTypeofSubmission__c</fullName>
        <label>Grantee Type of Submission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Pre-Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HideNewReviewBtn__c</fullName>
        <description>Logic for Hiding New Review Button</description>
        <formula>NOT(OR(ISPICKVAL(Status__c,&apos;Created&apos;),ISPICKVAL(Status__c,&apos;Internally Reviewed&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding New Review Button</inlineHelpText>
        <label>Hide New Review Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideShareBtn__c</fullName>
        <description>Show Share button only to record owner</description>
        <formula>OwnerId !=  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Show Share button only to record owner</inlineHelpText>
        <label>HideShareBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmitBtn__c</fullName>
        <formula>OR(
    NOT(OR(Text(Status__c) = &apos;Created&apos;,Text(Status__c) = &apos;Reviewed&apos;) ),
    DaysLeft__c&lt;0
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideSubmitBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HistoryParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>History Parent Id</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipName>PreApplicationHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HistoryReason__c</fullName>
        <inlineHelpText>This field is used to track Object History</inlineHelpText>
        <label>History Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IfYesprovidetheamount__c</fullName>
        <label>If Yes, provide the amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalStatus__c</fullName>
        <formula>If(AND(NumberOfReviewersAssigned__c &gt; 0, NumberOfReviewsInProgress__c =0 , NumberOfReviewsFinalized__c =0),&apos;Reviewers Assigned&apos;,
If(AND(NumberOfReviewersAssigned__c = NumberOfReviewsFinalized__c, NumberOfReviewsInProgress__c =0),&apos;Reviews Finalized&apos;,
&apos;Reviews In Progress&apos;
)
)</formula>
        <inlineHelpText>Field to find out the status of application. To be used by an internal user ONLY.</inlineHelpText>
        <label>Internal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsDataAttached__c</fullName>
        <label>Is Data Attached</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsFormulaGrant__c</fullName>
        <description>Is this Pre Application related to a Formula Grant Announcement?</description>
        <formula>Announcement__r.IsFormulaGrant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this Pre Application related to a Formula Grant Announcement</inlineHelpText>
        <label>Is Formula Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatchingAmountProvided__c</fullName>
        <label>Matching Amount Provided?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>IF( $Setup.GNT__UserPreferences__c.GNT__ActiveAppName__c = &apos;StateasGrantor&apos;,&apos;PR-&apos;+ Announcement__r.Program__r.Account__r.Code__c +&apos;-&apos;,&apos;PR-&apos;+ Announcement__r.Program__r.Account__r.Code__c +&apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Defines the template for the Name field which gets populated automatically by the trigger</inlineHelpText>
        <label>Name Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfPatientsBenefited__c</fullName>
        <label>Number Of Patients Benefited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReviewersAssigned__c</fullName>
        <label>Number of Reviewers Assigned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReviewsFinalized__c</fullName>
        <inlineHelpText>System populated. Indicates the number of reviews which are &quot;Review Completed&quot; for this pre-application</inlineHelpText>
        <label>Number of Reviews Finalized</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReviewsInProgress__c</fullName>
        <inlineHelpText>System populated. Indicates the number of reviews which are in progress for this pre-application</inlineHelpText>
        <label>Number of Reviews In Progress</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfStepsAddedTo__c</fullName>
        <label>Number of Steps Added To</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfStudentsBenefited__c</fullName>
        <label>Number Of Students Benefited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityCategory__c</fullName>
        <description>Category of the Opportunity</description>
        <label>Opportunity Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discretionary</fullName>
                </value>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Earmark</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityNumber__c</fullName>
        <description>Field to capture the  Opportunity number from the Opportunity</description>
        <label>Opportunity Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityTitle__c</fullName>
        <description>Opportunity name of the opportunity for which the PreApplication is being created</description>
        <label>Opportunity Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgAddress1__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrgAddress2__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrgAddress3__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrganizationAddress__c</fullName>
        <formula>ExternalOrganization__r.FullBillingAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationNameRef1__c</fullName>
        <label>Organization Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrganizationNameRef2__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationNameRef3__c</fullName>
        <label>Organization Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationUnit__c</fullName>
        <label>Organization Unit</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerManager__c</fullName>
        <formula>HYPERLINK(Owner:User.Manager.Id, Owner:User.Manager.FirstName &amp; &apos; &apos; &amp; Owner:User.Manager.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnersManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owners Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PreApplications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PageTemplateName__c</fullName>
        <description>Auto populated. Used to print PDF files for pre-applications at Awards or Review Assignment level</description>
        <label>Page Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumberRef1__c</fullName>
        <label>PhoneNumberRef1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhoneNumberRef2__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhoneNumberRef3__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PreAppGroupCodeFormula__c</fullName>
        <description>This Field is being used for running the Criteria based formual Fields</description>
        <formula>Announcement__r.Organization__r.GroupCode__c</formula>
        <label>PreApp Group Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreAppGroupCode__c</fullName>
        <label>PreApp Group Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreApplicationDeadline__c</fullName>
        <description>The Deadline for the Preapplication</description>
        <label>Pre-Application Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PreApplicationPackage__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Application Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreApplicationScore__c</fullName>
        <description>Formula Grants Score for Pre Application</description>
        <inlineHelpText>Formula Grants Score for Pre Application</inlineHelpText>
        <label>PreApplication Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreApplicationSubmissionTemplate__c</fullName>
        <formula>Announcement__r.PreApplicationSubmissionEmailTemplate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreApplication Submission Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pre-Applications (Contact)</relationshipLabel>
        <relationshipName>Pre_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ProgramApprover__c field of Announcement</description>
        <label>Program Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pre_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <formula>HYPERLINK( &apos;/&apos;+Announcement__r.Program__c , Announcement__r.Program__r.Name)</formula>
        <label>Program ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectAbstract__c</fullName>
        <label>Project Abstract</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProjectDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PreApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectPeriodEndDate__c</fullName>
        <label>Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectPeriodStartDate__c</fullName>
        <description>Project Period Start Date as entered by the applicant.</description>
        <label>Project Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProvidedBy1__c</fullName>
        <label>Provided By 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvidedBy2__c</fullName>
        <label>Provided By 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvidedBy3__c</fullName>
        <label>Provided By 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvidedDate__c</fullName>
        <label>Provided Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordComplete__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Submitted&apos;), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Complete ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordCompletionPercentage__c</fullName>
        <label>Record Completion Percentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RecordIncomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferenceFullName1__c</fullName>
        <label>Reference Full Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceFullName2__c</fullName>
        <label>Reference Full Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceFullName3__c</fullName>
        <label>Reference Full Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceNumber1__c</fullName>
        <label>Reference Number 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceNumber2__c</fullName>
        <label>Reference Number 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceNumber3__c</fullName>
        <label>Reference Number 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>